Poly Build: 4.1.0 RC - Blender crashes when deleted all faces, trying to create a first vertex #119862

Closed
opened 2024-03-25 06:58:27 +01:00 by ILJI · 6 comments

System Information
Operating system: macOS-13.6.5-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M2 1.2

Blender Version
Broken: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-21 20:22, hash: b9ef66693adf
Worked: 4.0.2, 4.0.3 RC

Short description of error
Using the Poly Build tool, Blender crashes when trying to create a first vertex, after prior deleting all faces.

Exact steps for others to reproduce the error

  1. Delete default cube
  2. Create plane
  3. Switch to top view
  4. Switch to Edit Mode
  5. Activate Poly Build tool
  6. Shift+LMB to delete the face of the plane
  7. Ctrl/Cmd+LMB, trying to create a first vertex
  8. Blender crashes

Thanks!

**System Information** Operating system: macOS-13.6.5-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M2 1.2 **Blender Version** Broken: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-21 20:22, hash: `b9ef66693adf` Worked: 4.0.2, 4.0.3 RC **Short description of error** Using the Poly Build tool, Blender crashes when trying to create a first vertex, after prior deleting all faces. **Exact steps for others to reproduce the error** 1. Delete default cube 2. Create plane 3. Switch to top view 4. Switch to Edit Mode 5. Activate Poly Build tool 5. Shift+LMB to delete the face of the plane 6. Ctrl/Cmd+LMB, trying to create a first vertex 7. Blender crashes Thanks!
ILJI added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-25 06:58:28 +01:00
Member

Thanks for the report. Can confirm the crash. Suspecting 9ab356fe6e introduced the crash.
@HooglyBoogly @ThomasDinges ^

Thanks for the report. Can confirm the crash. Suspecting 9ab356fe6efbce07ba89329673c79fc0318efa11 introduced the crash. @HooglyBoogly @ThomasDinges ^
Pratik Borhade added
Module
Modeling
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2024-03-25 07:43:13 +01:00
Member

For 4.1 I think fix should be to just check object_index/base_index > 0 because it can be intentionally -1 when no near base is found in gizmo_preselect_elem_test_select

I guessed it wrong. We still need the base object, checking further

For 4.1 I think fix should be to just check `object_index/base_index > 0` because it can be intentionally -1 when no near base is found in `gizmo_preselect_elem_test_select` I guessed it wrong. We still need the base object, checking further
Pratik Borhade self-assigned this 2024-03-25 08:03:06 +01:00
Pratik Borhade added this to the 4.1 milestone 2024-03-25 08:06:04 +01:00
Pratik Borhade removed their assignment 2024-03-25 08:07:11 +01:00
Member

Should fix this (making 0 as default). So it would never run out of bounds. Want me to make quick PR?

diff --git a/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc b/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc
index 01f1ed1e320..4d72f005443 100644
--- a/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc
+++ b/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc
@@ -214,7 +214,7 @@ static int gizmo_preselect_elem_test_select(bContext *C, wmGizmo *gz, const int

   BMesh *bm = nullptr;

-  gz_ele->base_index = -1;
+  gz_ele->base_index = 0;
   gz_ele->vert_index = -1;
   gz_ele->edge_index = -1;
   gz_ele->face_index = -1;
Should fix this (making 0 as default). So it would never run out of bounds. Want me to make quick PR? ``` diff --git a/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc b/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc index 01f1ed1e320..4d72f005443 100644 --- a/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc +++ b/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc @@ -214,7 +214,7 @@ static int gizmo_preselect_elem_test_select(bContext *C, wmGizmo *gz, const int BMesh *bm = nullptr; - gz_ele->base_index = -1; + gz_ele->base_index = 0; gz_ele->vert_index = -1; gz_ele->edge_index = -1; gz_ele->face_index = -1; ```
Philipp Oeser changed title from Poly Build: 4.1.0 RC - Mac M2 - Blender crashes when deleted all faces, trying to create a first vertex to Poly Build: 4.1.0 RC - Blender crashes when deleted all faces, trying to create a first vertex 2024-03-25 09:41:23 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-25 13:56:12 +01:00
Author

Thanks for the fix! Will give it a try later today. 🙏

Thanks for the fix! Will give it a try later today. 🙏
Member

Thanks, newer builds are available now to test: https://builder.blender.org/download/daily/

Thanks, newer builds are available now to test: https://builder.blender.org/download/daily/
Author

Just tried, not crashing anymore. Thanks again!
And 4.1 went from Release Candidate to Stable as well - nice. 🎉

Just tried, not crashing anymore. Thanks again! And 4.1 went from _Release Candidate_ to _Stable_ as well - nice. 🎉
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119862
No description provided.