Fix #119862: poly build crash when adding first vertex in empty geometry

object_index is not found (-1) when all mesh data is deleted hence it
crashes when accessing base from the vector at index -1.
default `base_index/object_index` could be changed to 0 but in some
places `-1`.
Here fix is to just ensure `object_index` is always non negative.